@@ -108,6 +108,13 @@ OutputFile	/dev/stdout
 ;	If you don't pipe the output someplace else, this WILL mess up you
 ;	current console/terminal! Set it to something useful, especially for
 ;	daemon mode
+;Archive       /tmp/archive/webcam-%Y-%d-%m-%H-%M-%S.jpg
+;       Archive images to strftime formatted filenames. Default: Off
+;       This archives the grabbed images to the specified path. The path
+;       is first processed with strftime to get the actual filename, see
+;       man 3 strftime for details.
+;	Be aware: this option might fill your harddrive because there is
+;	no upper limit for the archive, yet!!
 VideoDevice	/dev/video
 ;	Where to get the data from. This device must be read/writeable by the
 ;	user running vgrabbj
